--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: 
   cloud_firestore:
-
+  geolocator: ^5.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
